[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/contract_board_ui.gd" id="1"]

[node name="ContractBoardUI" type="CanvasLayer"]
script = ExtResource("1")
visible = false

[node name="BoardPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -220.0
offset_right = 360.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="BoardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="BoardPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="BoardPanel/Margin/VBox"]
layout_mode = 2
text = "Contracts"
horizontal_alignment = 1

[node name="Offers" type="VBoxContainer" parent="BoardPanel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseRow" type="HBoxContainer" parent="BoardPanel/Margin/VBox"]
layout_mode = 2

[node name="Spacer" type="Control" parent="BoardPanel/Margin/VBox/CloseRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="BoardPanel/Margin/VBox/CloseRow"]
layout_mode = 2
text = "Close"

